--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
     "gulp-autoprefixer": "^8.0.0",
     "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.6.1",
+    "gulp-imagemin": "^8.0.0",
     "gulp-notify": "^4.0.0",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.1.0",
     "gulp-uglify": "^3.0.2",
     "sass": "^1.54.0"
+  },
+  "dependencies": {
+    "imagemin-webp": "^7.0.0"
   }
 }
